force-app/main/default/objects/Confirmation__c/Confirmation__c.object-meta.xml
<CustomObject>
    <label>Refinance Confirmation</label>
    <nameField>
        <displayFormat>CF-{00000000}</displayFormat>
        <label>Confirmation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refinance Confirmations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>