force-app/main/default/objects/Confirmation__c/fields/Actual_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Settlement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Settlement Date</label>
    <type>Date</type>
</CustomField>