force-app/main/default/objects/Confirmation__c/fields/Approved_by_new_PF__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_new_PF__c</fullName>
    <label>Approved by new Panel Financier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>