force-app/main/default/objects/Confirmation__c/fields/Confirmed_by_Participant__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_by_Participant__c</fullName>
    <label>Confirmed by Participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>