force-app/main/default/objects/Confirmation__c/fields/Current_Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Maturity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Loan Maturity Date</label>
    <type>Date</type>
</CustomField>