force-app/main/default/objects/Confirmation__c/fields/Current_PF__c.field-meta.xml
<CustomField>
    <fullName>Current_PF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Panel Financier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>