force-app/main/default/objects/Confirmation__c/fields/Loan_maturity_date_extended_due_to_hards__c.field-meta.xml
<CustomField>
    <fullName>Loan_maturity_date_extended_due_to_hards__c</fullName>
    <label>Loan maturity date extended due to hards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>