force-app/main/default/objects/Confirmation__c/fields/Loan_maturity_extended_due_to_hardship__c.field-meta.xml
<CustomField>
    <fullName>Loan_maturity_extended_due_to_hardship__c</fullName>
    <label>Loan maturity extended due to hardship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>