force-app/main/default/objects/Confirmation__c/fields/LVR_80__c.field-meta.xml
<CustomField>
    <fullName>LVR_80__c</fullName>
    <label>LVR&lt;=80%</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>