force-app/main/default/objects/Confirmation__c/fields/New_PF__c.field-meta.xml
<CustomField>
    <fullName>New_PF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Panel Financier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refinance Confirmations (New PF)</relationshipLabel>
    <relationshipName>Confirmations1</relationshipName>
    <type>Lookup</type>
</CustomField>