force-app/main/default/objects/Confirmation__c/fields/Not_Confirmed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Confirmed_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Not Confirmed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>