force-app/main/default/objects/Confirmation__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>If(BEGINS((OwnerId), &apos;005&apos;),Owner:User.FirstName + &quot; &quot; + Owner:User.LastName,  Owner:Queue.QueueName )</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>