force-app/main/default/objects/Confirmation__c/fields/P_I_loan__c.field-meta.xml
<CustomField>
    <fullName>P_I_loan__c</fullName>
    <label>P&amp;I loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>