force-app/main/default/objects/Confirmation__c/fields/Panel_Finance_Officer__c.field-meta.xml
<CustomField>
    <fullName>Panel_Finance_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel Finance Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>