force-app/main/default/objects/Confirmation__c/fields/Participant_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>