force-app/main/default/objects/Confirmation__c/fields/Participant_Names__c.field-meta.xml
<CustomField>
    <fullName>Participant_Names__c</fullName>
    <formula>(IF(ISBLANK(Participant_Name_1__c), &quot;&quot;, Participant_Name_1__c))
+ (IF(ISBLANK(Participant_Name_2__c), &quot;&quot;, &quot;, &quot; +Participant_Name_2__c))
+ (IF(ISBLANK(Participant_Name_3__c), &quot;&quot;, &quot;, &quot; +Participant_Name_3__c))
+ (IF(ISBLANK(Participant_Name_4__c), &quot;&quot;, &quot;, &quot; +Participant_Name_4__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Names</label>
    <type>Text</type>
</CustomField>