force-app/main/default/objects/Confirmation__c/fields/Primary_Participant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Participant</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>