force-app/main/default/objects/Confirmation__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Property_ID__r.Property_Address__c</formula>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>