force-app/main/default/objects/Confirmation__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property ID</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>