force-app/main/default/objects/Confirmation__c/fields/Reason_for_extension_of_loan_maturity_da__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_extension_of_loan_maturity_da__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for extension of loan maturity da</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>