force-app/main/default/objects/Confirmation__c/fields/Refinance_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refinance Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Refinance Confirmations</relationshipLabel>
    <relationshipName>Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>