force-app/main/default/objects/Confirmation__c/fields/VGSO_Visible__c.field-meta.xml
<CustomField>
    <fullName>VGSO_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VGSO Visible</label>
    <type>Checkbox</type>
</CustomField>