force-app/main/default/objects/Confirmation__c/validationRules/Prevent_Users_creating_records_manually.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Users_creating_records_manually</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(BypassValidation__c), ISNEW(), NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>Sorry, You cannot create a new Refinance Confirmation record manually.</errorMessage>
</ValidationRule>