force-app/main/default/objects/Confirmation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Address__c</columns>
    <columns>Status__c</columns>
    <columns>Current_PF__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Refinance Confirmations</label>
</ListView>