force-app/main/default/objects/Confirmation__c/listViews/Awaiting_Refinance_Confirmation.listView-meta.xml
<ListView>
    <fullName>Awaiting_Refinance_Confirmation</fullName>
    <columns>NAME</columns>
    <columns>Property_Address__c</columns>
    <columns>Status__c</columns>
    <columns>Current_PF__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Confirmation</value>
    </filters>
    <label>Awaiting Refinance Confirmation</label>
    <sharedTo>
        <group>All_Lender_Users</group>
    </sharedTo>
</ListView>