force-app/main/default/objects/Confirmation__c/listViews/Mortgage_Re_register_Queue_Confirmation.listView-meta.xml
<ListView>
    <fullName>Mortgage_Re_register_Queue_Confirmation</fullName>
    <filterScope>Queue</filterScope>
    <label>Mortgage Re-register Queue</label>
    <queue>Mortgage_Re_register_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>