force-app/main/default/objects/Confirmation__c/listViews/Refinance_Confirmed.listView-meta.xml
<ListView>
    <fullName>Refinance_Confirmed</fullName>
    <columns>NAME</columns>
    <columns>Property_Address__c</columns>
    <columns>Status__c</columns>
    <columns>Current_PF__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>Refinance Confirmed</label>
    <sharedTo>
        <group>All_Lender_Users</group>
    </sharedTo>
</ListView>