force-app/main/default/objects/Confirmation__c/listViews/Refinance_PF_Queue_Confirmation.listView-meta.xml
<ListView>
    <fullName>Refinance_PF_Queue_Confirmation</fullName>
    <filterScope>Queue</filterScope>
    <label>Refinance - PF Queue</label>
    <queue>Refinance_PF_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>